home and seller component addition

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: sans-serif;
+}
+.container {
+  margin: 0 5%;
+}
+.common-form {
+  text-align: center;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  width: 400px;
+}
+.form-input {
+  height: 35px;
+  border: 1px solid blueviolet;
+  color: blueviolet;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  padding: 5px;
+  font-size: 14px;
+  outline: none;
+}
+.form-button {
+  border: 1px solid blueviolet;
+  height: 40px;
+  border-radius: 3px;
+  background: blueviolet;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+}
