--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<nav class="nav">
+    <h1>E-COMM</h1>
+    <div class="nav-search">
+        <input type="text" placeholder="Search any Product">
+        <button>Search</button>
+    </div>
+    <ul>
+        <li><a [routerLink]="['']">Home</a></li>
+        <li><a routerLink="seller">Seller</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Cart(0)</a></li>
+    </ul>
+</nav>
